variables.RunHalf.scala.error
Compilation error:
RunHalf:3: error: overloaded method value * with alternatives:
  (x: Double)Double <and>
  (x: Float)Float <and>
  (x: Long)Long <and>
  (x: Int)Int <and>
  (x: Char)Int <and>
  (x: Short)Int <and>
  (x: Byte)Int
 cannot be applied to (Boolean)
while(2*estSurBiscuit != estSurOrange + 1) {
       ^RunHalf:3: error: type mismatch;
 found   : Int(1)
 required: String
while(2*estSurBiscuit != estSurOrange + 1) {
                                        ^